--- a/pocketr-ui/package.json
+++ b/pocketr-ui/package.json
@@ -17,7 +17,13 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/vue-table": "^8.21.3",
+    "ky": "^1.14.3",
+    "lucide-vue-next": "^0.563.0",
     "pinia": "^3.0.4",
+    "reka-ui": "^2.8.0",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.5.27",
     "vue-router": "^5.0.1"
   },
