--- a/pocketr-ui/package.json
+++ b/pocketr-ui/package.json
@@ -17,6 +17,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@internationalized/date": "^3.11.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/vue-table": "^8.21.3",
     "@vueuse/core": "^14.2.1",
@@ -25,7 +26,7 @@
     "ky": "^1.14.3",
     "lucide-vue-next": "^0.563.0",
     "pinia": "^3.0.4",
-    "reka-ui": "^2.8.0",
+    "reka-ui": "^2.8.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.27",
