--- a/pocketr-api/src/main/resources/application.yaml
+++ b/pocketr-api/src/main/resources/application.yaml
@@ -14,6 +14,7 @@ spring:
       max-request-size: 5MB
   jpa:
     hibernate:
+      # Dev default: 'update' preserves local data. Use --spring.profiles.active=alpha-reset for clean schema rebuild.
       ddl-auto: update
 
 server:
