--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
+# Dev-only values for local Docker Compose services.
+# Keep in sync with fallback credentials in `application-dev.yaml`.
 DB_USER=pocketr_user
-DB_PASSWORD=change_me_in_production
+DB_PASSWORD=pocketr_password
